avatar bug debugged and warnings solved